test/types/range/unbounded/noFirst-forloop-up.good
noFirst-forloop-up.chpl:4: error: iteration over a range with no first index
