test/types/range/unbounded/noFirst-forloop-up.chpl

writeln("start");

for x in ..4 by 7 do
  writeln(x);

writeln("finish");
